--- a/community/src/packages/core/src/i18n/ar-EG.json
+++ b/community/src/packages/core/src/i18n/ar-EG.json
@@ -1,5 +1,31 @@
 {
   "components": {
+    "EmbeddedForm": {
+      "description": "نموذج مضمن في نموذج آخر",
+      "name": "شكل مضمن",
+      "props": {
+        "disabled": {
+          "description": "إذا كان هذا صحيحا ، يتم تعطيل النموذج المضمن",
+          "name": "معاق"
+        },
+        "formName": {
+          "description": "اسم النموذج",
+          "name": "اسم النموذج"
+        },
+        "options": {
+          "description": "الخيارات الإضافية لتحميل النموذج المضمن",
+          "name": "الخيارات"
+        },
+        "readOnly": {
+          "description": "إذا كان هذا صحيحا ، فإن النموذج المضمن للقراءة فقط",
+          "name": "للقراءة فقط"
+        },
+        "storeDataInParentForm": {
+          "description": "إذا كاذبة ، تظهر بيانات النموذج المتداخلة ككائن متداخل ، صحيح خلاف ذلك",
+          "name": "تخزين البيانات في شكل الأصل"
+        }
+      }
+    },
     "Repeater": {
       "description": "مكون المكرر هو مكون خاص مسؤول عن عرض مجموعة من المكونات المتكررة",
       "name": "مكرر",
