--- a/community/src/packages/core/src/i18n/fa-IR.json
+++ b/community/src/packages/core/src/i18n/fa-IR.json
@@ -1,5 +1,31 @@
 {
   "components": {
+    "EmbeddedForm": {
+      "description": "فرم تعبیه شده در فرم دیگر",
+      "name": "فرم تعبیه شده",
+      "props": {
+        "disabled": {
+          "description": "اگر درست باشد ، فرم جاسازی شده غیرفعال است",
+          "name": "معلول"
+        },
+        "formName": {
+          "description": "نام فرم",
+          "name": "نام فرم"
+        },
+        "options": {
+          "description": "گزینه های اضافی برای بارگذاری فرم جاسازی شده",
+          "name": "گزینه ها"
+        },
+        "readOnly": {
+          "description": "اگر درست باشد ، فرم جاسازی شده فقط برای خواندن است",
+          "name": "فقط بخوانید"
+        },
+        "storeDataInParentForm": {
+          "description": "اگر نادرست باشد ، داده های فرم آشیانه ای به عنوان شی آشیانه ای نشان داده می شوند ، در غیر این صورت درست است",
+          "name": "ذخیره اطلاعات در فرم والدین"
+        }
+      }
+    },
     "Repeater": {
       "description": "م Componentلفه تکرار کننده یک م componentلفه خاص است که وظیفه نمایش آرایه ای از اجزای تکرار را بر عهده دارد",
       "name": "تکرار کننده",
