--- a/community/src/packages/core/src/i18n/hi-IN.json
+++ b/community/src/packages/core/src/i18n/hi-IN.json
@@ -1,5 +1,31 @@
 {
   "components": {
+    "EmbeddedForm": {
+      "description": "एक रूप दूसरे रूप में एम्बेडेड",
+      "name": "एंबेडेड फॉर्म",
+      "props": {
+        "disabled": {
+          "description": "यदि सही है, तो एम्बेडेड फॉर्म अक्षम है",
+          "name": "विकलांग"
+        },
+        "formName": {
+          "description": "फॉर्म का नाम",
+          "name": "फार्म का नाम"
+        },
+        "options": {
+          "description": "एम्बेडेड फॉर्म लोड करने के लिए अतिरिक्त विकल्प",
+          "name": "विकल्प"
+        },
+        "readOnly": {
+          "description": "यदि सही है, तो एम्बेडेड फॉर्म केवल पढ़ने के लिए है",
+          "name": "केवल पढ़ें"
+        },
+        "storeDataInParentForm": {
+          "description": "यदि गलत, नेस्टेड फॉर्म डेटा नेस्टेड ऑब्जेक्ट के रूप में दिखाता है, तो अन्यथा सही है",
+          "name": "मूल रूप में डेटा स्टोर करें"
+        }
+      }
+    },
     "Repeater": {
       "description": "पुनरावर्तक घटक एक विशेष घटक है जो दोहराए जाने वाले घटकों की एक सरणी प्रदर्शित करने के लिए जिम्मेदार है",
       "name": "पुनरावर्तक",
