--- a/community/src/packages/core/src/i18n/sr-RS.json
+++ b/community/src/packages/core/src/i18n/sr-RS.json
@@ -1,5 +1,31 @@
 {
   "components": {
+    "EmbeddedForm": {
+      "description": "Образац угнежђен у другом облику",
+      "name": "Уграђени образац",
+      "props": {
+        "disabled": {
+          "description": "Ако је вредност Труе, Уграђени образац је онемогућен",
+          "name": "Неспособан за рад"
+        },
+        "formName": {
+          "description": "Име обрасца",
+          "name": "Назив обрасца"
+        },
+        "options": {
+          "description": "Додатне опције за преузимање уграђеног обрасца",
+          "name": "Опције"
+        },
+        "readOnly": {
+          "description": "Ако је вредност Труе, Уграђени образац је само за читање",
+          "name": "Само за читање"
+        },
+        "storeDataInParentForm": {
+          "description": "Ако је Фалсе, подаци угнежђеног обрасца приказују се као угнежђени објекат, у супротном Труе",
+          "name": "Чувајте податке у родитељском обрасцу"
+        }
+      }
+    },
     "Repeater": {
       "description": "Компонента Репеатер је посебна компонента која је одговорна за приказивање низа поновљених компоненти",
       "name": "Репетитор",
